--- a/Project2/test-output/old/Default suite/methods-alphabetical.html
+++ b/Project2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f71a9">  <td>18/08/18 00:16:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminIterateThroughBatchCoreUntilMemoryFault()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6dc17b83]">adminIterateThroughBatchCoreUntilMemoryFault</td> 
-  <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>18/08/18 13:06:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminIterateThroughBatchCoreUntilMemoryFault()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6356695f]">adminIterateThroughBatchCoreUntilMemoryFault</td> 
+  <td>main@310623126</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>18/08/18 13:06:36</td>   <td>-10855</td> <td>&nbsp;</td><td title="&gt;&gt;Assignforce_Testing_KW.launchApplicationAsAdmin()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6356695f]">&gt;&gt;launchApplicationAsAdmin</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@310623126</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>18/08/18 13:07:11</td>   <td>23666</td> <td>&nbsp;</td><td title="&lt;&lt;Assignforce_Testing_KW.logoutAndCloseDriver()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6356695f]">&lt;&lt;logoutAndCloseDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@310623126</td>   <td></td> </tr>
 </table>
