--- a/Project2/test-output/old/Default suite/classes.html
+++ b/Project2/test-output/old/Default suite/classes.html
@@ -4,94 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.revature.testng.Assignforce_Testing_KW</td>
+<td>com.revature.testng.Assignforce_Testing_KW_Users</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>adminIterateThroughTrainers</td>
-<td>&nbsp;</td></tr>
+<td>userSettings</td>
+<td>userTests </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndSubmit</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughCotrainers</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughBatchCoreUntilMemoryFault</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testAdminLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughLocations</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel6</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel7</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel4</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel5</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testUserLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel8</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughBatchCoreList</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel9</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughSkillsList</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughBuildling</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel3</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminCreateNewBatchAndCancel0</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>adminIterateThroughRoom</td>
+<td>userProfile</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -100,7 +25,189 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>launchApplicationAsUser</td>
+<td>userTests </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>logoutAndCloseDriver</td>
+<td>testFunctionality createBatch </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.revature.cucumber.TestRunner</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>feature</td>
+<td>cucumber </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUpClass</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDownClass</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.revature.testng.Assignforce_Testing_KW</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughTrainers</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndSubmit</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughCotrainers</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughBatchCoreUntilMemoryFault</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testAdminLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel10</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughLocations</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel6</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel7</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel4</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel5</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminEditMultipleBatch</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminEditSingleBatch</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testUserLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel8</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughBatchCoreList</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel9</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughSkillsList</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughBuildling</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel2</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminCreateNewBatchAndCancel3</td>
+<td>createBatch </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminIterateThroughRoom</td>
+<td>testFunctionality </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchApplicationAsAdmin</td>
+<td>testFunctionality createBatch </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>logoutAndCloseDriver</td>
+<td>testFunctionality createBatch </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
