--- a/Project2/test-output/old/Default suite/methods.html
+++ b/Project2/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d964ec">  <td>18/08/19 22:22:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Assignforce_Testing_KW.launchApplicationAsAdmin()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6b927fb]">&gt;&gt;launchApplicationAsAdmin</td> 
-<td>&nbsp;</td>  <td>main@1427381743</td>   <td></td> </tr>
-<tr bgcolor="d964ec">  <td>18/08/19 22:23:23</td>   <td>37203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminIterateThroughRoom()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6b927fb]">adminIterateThroughRoom</td> 
-  <td>main@1427381743</td>   <td></td> </tr>
-<tr bgcolor="d964ec">  <td>18/08/19 22:23:43</td>   <td>56668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Assignforce_Testing_KW.logoutAndCloseDriver()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6b927fb]">&lt;&lt;logoutAndCloseDriver</td> 
-<td>&nbsp;</td>  <td>main@1427381743</td>   <td></td> </tr>
+<tr bgcolor="d09fa4">  <td>18/08/20 00:40:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.revature.cucumber.TestRunner@5876a9af]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1948471365</td>   <td></td> </tr>
+<tr bgcolor="d09fa4">  <td>18/08/20 00:40:38</td>   <td>646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.revature.cucumber.TestRunner@5876a9af]">feature</td> 
+  <td>main@1948471365</td>   <td></td> </tr>
+<tr bgcolor="d09fa4">  <td>18/08/20 00:40:58</td>   <td>20397</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.revature.cucumber.TestRunner@5876a9af]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1948471365</td>   <td></td> </tr>
+<tr bgcolor="d09fa4">  <td>18/08/20 00:40:58</td>   <td>20511</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.revature.cucumber.TestRunnerBatch@7ec7ffd3]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1948471365</td>   <td></td> </tr>
+<tr bgcolor="d09fa4">  <td>18/08/20 00:40:58</td>   <td>20572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.revature.cucumber.TestRunnerBatch@7ec7ffd3]">feature</td> 
+  <td>main@1948471365</td>   <td></td> </tr>
+<tr bgcolor="d09fa4">  <td>18/08/20 00:43:36</td>   <td>178370</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.revature.cucumber.TestRunnerBatch@7ec7ffd3]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1948471365</td>   <td></td> </tr>
 </table>
